Revision history for HTTP-Cookies.  The HTTP::Cookies module used to be bundled
with the libwww-perl distribution.

{{$NEXT}}

6.08      2019-12-02 15:58:32Z
    - allow different "ignore_discard" value at save() time (GH#2) (Alex Peters)

6.07      2019-11-15 18:11:42Z
    - Fix t/issue32.t on old perl versions (GH#59) (Bernhard M. Wiedemann)

6.06      2019-11-12 14:28:31Z
    - Make test pass in 2025 (GH#56) (Bernhard M. Wiedemann)

6.05      2019-10-24 02:21:51Z
    - Fix GH#32 by checking for " as well as ; when splitting. (GH#49) (colinnewell)
    - Fix GH#48 update documentation about $version (GH#55) (Dave Menninger)
    - Fix broken README badge (GH#54) (Alex Peters)
    - Whenever possible, use an absolute four digit year for Time::Local (GH#52) (Olaf Alders)
    - Add test case for Issue #26 (GH#45) (George-NG)
    - Long numbers (GH#47) (pludlamCVL)
    - Cookies.pm: die if close on $fh in ->save fails (GH#46) (MCRayRay)
    - Replace "use vars" with "our" (GH#43) (James Raspass)
    - Fixed minor typo in the pod for HTTP::Cookies. (GH#39) (Mohammad S Anwar)

6.04      2017-08-03 15:05:22Z
    - Fix package version numbers

6.03      2017-04-03 11:35:35-04:00 America/Toronto
    - No changes since TRIAL release 6.02

6.02      2017-01-12 18:02:49-05:00 America/Toronto (TRIAL RELEASE)
    - Document the lack of Public Suffix https://publicsuffix.org/ support
    - Add TODO tests for lack of Public Suffix support
    - Improve "maxage" documentation
    - Update the GitHub repository location
    - Use GitHub Issues instead of RT
    - Stop using bareword filehandles
    - Various internal distribution management and testing changes
    - Add get_cookies() method

6.01 2012-02-15
    - Restore 5.8.1 compatiblity.

6.00 2011-02-27
    - Initial release of HTTP-Cookies as a separate distribution. There are no
      code changes besides incrementing the version number since
      libwww-perl-5.837.