@@ -1,0 +1,6 @@
+# Netscape HTTP Cookie File
+# http://www.netscape.com/newsref/std/cookie_spec.html
+# This is a generated file!  Do not edit.
+
+www.acme.com	FALSE	/	FALSE	2147483647	foo1	bar
+#HttpOnly_www.acme.com	FALSE	/	FALSE	2147483647	foo2	bar
